@@ -1,3 +1,13 @@
+Mon May 30 12:07:40 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
+          Removed unused ACE_ARG_UNUSED.
+
+        * connectors/dds4ccm/tests/PSAT/ccm_dds_psat.mpc:
+          PSAT stub project was using the *.cxx, generated by the
+          DDS IDL compiler. Fixed this by merging two projects 
+          (idl_gen and _stub) into one (_stub).
+
 Sun May 29 17:31:41 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * MPC/config/dds4ccm_ts_default.mpb:
